fix image overflow on the about page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -261,6 +261,7 @@ color: #F7EBEC;
 
 .about-image {
     max-width: 40vw;
+    overflow: hidden;
 }
 
 .about-text {
